--- a/scss/editor/lists/tasks/_tasks.scss
+++ b/scss/editor/lists/tasks/_tasks.scss
@@ -1,6 +1,6 @@
+@use 'tasks-doodle-boxes';
+@use 'tasks-alternative-boxes';
+@use 'tasks-alternative-icons';
 @use 'assets-alternate-icons-doodle';
 @use 'assets-alternate-icons-lucide';
 @use 'assets-checkboxes-doodle';
-@use 'tasks-alternate-icons';
-@use 'tasks-doodle-boxes';
-@use 'tasks-standard-boxes';
