--- a/scss/editor/lists/tasks/_assets-alternate-icons-lucide.scss
+++ b/scss/editor/lists/tasks/_assets-alternate-icons-lucide.scss
@@ -1,5 +1,4 @@
-body:not(.fas-doodle-icons),
-body.fas-accessibility {
+body {
     --icon-failed: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='3' stroke-linecap='round' stroke-linejoin='round' class='lucide lucide-slash'%3E%3Cpath d='M18 6 6 18'/%3E%3Cpath d='M6 6 18 18'/%3E%3C/svg%3E");
     --icon-incomplete: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='3' stroke-linecap='round' stroke-linejoin='round' class='lucide lucide-slash'%3E%3Cpath d='M18 6 6 18'/%3E%3C/svg%3E");
 
