Fix bookmark tabs to allow dragging

--- a/scss/window/_fas-bookmark-tabs.scss
+++ b/scss/window/_fas-bookmark-tabs.scss
@@ -1,19 +1,13 @@
 .fas-bookmark-tabs .mod-sidedock {
-    .workspace-leaf {
-        padding-top: calc(var(--header-height) - 6px);
-    }
 
     .workspace-tab-header-container {
-        height: 6px;
-    }
-
-    .workspace-tab-header-container-inner {
         position: absolute;
         height: calc(var(--header-height) + 0.5 * var(--cutout-corner-radius));
         z-index: 1;
         top: -2px;
         filter: drop-shadow(2px 2px 2px var(--shadow-color));
         gap: 6px;
+        width: 100%;
     }
 
     .workspace-tab-header-container:hover {
@@ -22,6 +16,8 @@
 
     .workspace-tab-header {
         background-color: var(--workspace-background);
+        background-image: linear-gradient(to bottom, rgb(255 255 255 / 0.08) 2px, rgb(255 255 255 / 0.03) 8px, transparent 20px);
+        background-size: 100% 100%;
         clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 80%, 0 100%);
     }
 
@@ -31,5 +27,13 @@
 
     .workspace-tab-header.is-active:hover {
         background-color: var(--color-accent-1);
+    }
+
+    .workspace-tab-container {
+        margin-top: 6px;
+    }
+
+    .workspace-leaf {
+        padding-top: calc(var(--header-height) - 6px);
     }
 }
